# rustsadt

./: .prettierrc.json  Cargo.toml  README.md
aistudio/: 1.prompt.md  1.response.md
examples/: simple_process.ron  simple_process_doc.md  simple_process_generated.rs
src/: algorithm_library.rs  app.rs  error.rs  generator.rs  main.rs  persistence.rs  sadt_elements.rs  sadt_model.rs
src/ui/: drawing.rs  interaction.rs  transform.rs
templates/: markdown_doc.tera  rust_function.tera  rust_module.tera
