[package]
name = "rustsadt"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27" # Ou la dernière version stable
egui = { version = "0.27", features = ["persistence"] } # Persistence pour l'état egui si besoin
serde = { version = "1.0", features = ["derive"] }
ron = "0.10.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
tera = "1.19"
log = "0.4"
env_logger = "0.11"
rfd = "0.15.3"
thiserror = "2.0.12"

# SVG/PNG Export
svg = "0.18.0"
usvg = "0.45.1"
tiny-skia = "0.11"
png = "0.17"
resvg = "0.45.1"